Fixed several bugs

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:westcoast-cars.database.windows.net,1433;Initial Catalog=wcc;Persist Security Info=False;User ID=clarafred;Password=GillarLiv1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=wcc.db"
   },
   "CosmosDB": {
     "url": "https://wcc-doc.documents.azure.com:443/",
